welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (noDoubles && die1==die2){
    var de=0
    if (die1<=5){
      de = die +1
    } else {
      de = 1
    }
    return de+die2
  } else {
    return die1+die2
  }
}